update html content

--- a/index.html
+++ b/index.html
@@ -11,8 +11,33 @@
 </head>
 <body>
   <main>
-    <h1>Stewart Knapman</h1>
-    <p>Testing some text</p>
+    <section>
+      <h1>Stewart Knapman</h1>
+      <p>Senior technical lead and expert in Shopify Plus with nearly a decade of experience woking with Shopify store owners.
+        <br>Want to see how I can add value to your next project?
+        <a class="btn" href="mailto:info@stewartknapman.com">Contact&nbsp;me</a>
+      </p>
+    </section>
+    <section>
+      <h2>Around the web</h2>
+      <ul>
+        <li>
+          <a href="https://twitter.com/stewartknapman" title="Stewart Knapman on Twitter">
+            <span class="h">Twitter</span>
+          </a>
+        </li>
+          <li>
+            <a href="https://www.linkedin.com/in/stewart-knapman-b752a9190/" title="Stewart Knapman on LinkedIn">
+              <span class="h">LinkedIn</span>
+            </a>
+          </li>
+        <li>
+          <a href="https://github.com/stewartknapman" title="Stewart Knapman on Github">
+            <span class="h">Github</span>
+          </a>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
