--- a/index.html
+++ b/index.html
@@ -11,37 +11,40 @@
 </head>
 <body>
   <div class="masthead">
-    
+
   </div>
   <main>
     <div class="container">
-      <section>
-        <h1>Stewart Knapman</h1>
-        <p>Senior technical lead and expert in Shopify Plus with nearly a decade of experience woking with Shopify store owners.
-          <br>Want to see how I can add value to your next project?
-          <a class="btn" href="mailto:info@stewartknapman.com">Contact&nbsp;me</a>
-        </p>
-      </section>
-      <section>
-        <h2>Around the web</h2>
-        <ul>
-          <li>
-            <a href="https://twitter.com/stewartknapman" title="Stewart Knapman on Twitter">
-              <span class="h">Twitter</span>
-            </a>
-          </li>
-            <li>
-              <a href="https://www.linkedin.com/in/stewart-knapman-b752a9190/" title="Stewart Knapman on LinkedIn">
-                <span class="h">LinkedIn</span>
-              </a>
-            </li>
-          <li>
-            <a href="https://github.com/stewartknapman" title="Stewart Knapman on Github">
-              <span class="h">Github</span>
-            </a>
-          </li>
-        </ul>
-      </section>
+      <h1>Stewart Knapman</h1>
+      <p>Senior technical lead and Shopify Plus expert with over 12 years of web development&nbsp;experience.
+        <br><a href="mailto:info@stewartknapman.com">Contact me to see how I can add value to your next&nbsp;project</a>.
+      </p>
+      <ul class="link-list">
+        <li>
+          <a href="https://twitter.com/stewartknapman" title="Stewart Knapman on Twitter">
+            <span class="visually-hidden">Follow me on Twitter</span>
+            <svg id="icon-twitter" class="icon" viewBox="0 0 24 24">
+              <path d="M17.71,9.33C18.19,8.93 18.75,8.45 19,7.92C18.59,8.13 18.1,8.26 17.56,8.33C18.06,7.97 18.47,7.5 18.68,6.86C18.16,7.14 17.63,7.38 16.97,7.5C15.42,5.63 11.71,7.15 12.37,9.95C9.76,9.79 8.17,8.61 6.85,7.16C6.1,8.38 6.75,10.23 7.64,10.74C7.18,10.71 6.83,10.57 6.5,10.41C6.54,11.95 7.39,12.69 8.58,13.09C8.22,13.16 7.82,13.18 7.44,13.12C7.81,14.19 8.58,14.86 9.9,15C9,15.76 7.34,16.29 6,16.08C7.15,16.81 8.46,17.39 10.28,17.31C14.69,17.11 17.64,13.95 17.71,9.33M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/stewart-knapman-b752a9190/" title="Stewart Knapman on LinkedIn">
+            <span class="visually-hidden">Connect with me on LinkedIn</span>
+            <svg id="icon-linkedin" class="icon" viewBox="0 0 512 512">
+              <path d="M241.5 20.1C185.8 24.4 134.2 48.5 94 88.9 57.4 125.8 35.1 171.8 27.9 225c-1.9 14-1.6 44.9.6 60 12.6 88.8 73.8 162.2 158.3 190 76.1 25.1 158.6 9.9 220.7-40.5 11.9-9.7 30.2-28.6 39.1-40.5 24.9-33.3 39.5-69.1 45.6-111.5 1.9-13.3 1.6-47.3-.6-61.9-9.1-62.4-41.7-117.1-92.3-155-45.2-33.8-101-49.9-157.8-45.5zm-56 108.8c9.7 4.3 15.9 14.3 15.9 25.6 0 24.6-28 37.3-46.2 21-14-12.6-13.2-31.6 2-43.8 7.2-5.7 19-6.9 28.3-2.8zM350 202c14.2 3.8 27.2 15 34.1 29.3 7.3 15.1 7.4 16.4 7.4 76.7v53.5l-25 .3c-22.6.2-25.1.1-26.2-1.5-1-1.3-1.3-12.5-1.3-47.9 0-43.1-.1-46.6-2-52.5-2.3-7.5-6.6-13.1-12.3-16.1-5.3-2.8-17.2-3-23.1-.4-6.3 2.8-13.3 10.1-15.6 16.2-1.9 5.2-2 7.7-2 52.8 0 38.9-.2 47.6-1.4 48.5-.9.8-8.7 1.1-26.2.9l-24.9-.3-.3-77.9c-.1-56.7.1-78.2.9-79.2.9-1.1 6.1-1.4 25-1.4 20.3 0 24 .2 25.3 1.6 1.2 1.2 1.6 3.7 1.6 10.7v9.2l2.7-3.5c9-11.7 22.1-19.3 35.8-20.8 7.2-.8 21.3.1 27.5 1.8zm-149.6 2.6c1.4 1.4 1.6 9.8 1.6 77.8 0 59.4-.3 76.6-1.2 77.9-1.2 1.6-3.7 1.7-26.3 1.5l-25-.3-.3-77.9c-.1-56.7.1-78.2.9-79.2.9-1.1 6.1-1.4 25-1.4 20.3 0 24 .2 25.3 1.6z"/>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/stewartknapman" title="Stewart Knapman on Github">
+            <span class="visually-hidden">Check out my work on Github</span>
+            <svg id="icon-dribbble" class="icon" viewBox="0 0 24 24">
+              <path d="M16.42,18.42C16,16.5 15.5,14.73 15,13.17C15.5,13.1 16,13.06 16.58,13.06H16.6V13.06H16.6C17.53,13.06 18.55,13.18 19.66,13.43C19.28,15.5 18.08,17.27 16.42,18.42M12,19.8C10.26,19.8 8.66,19.23 7.36,18.26C7.64,17.81 8.23,16.94 9.18,16.04C10.14,15.11 11.5,14.15 13.23,13.58C13.82,15.25 14.36,17.15 14.77,19.29C13.91,19.62 13,19.8 12,19.8M4.2,12C4.2,11.96 4.2,11.93 4.2,11.89C4.42,11.9 4.71,11.9 5.05,11.9H5.06C6.62,11.89 9.36,11.76 12.14,10.89C12.29,11.22 12.44,11.56 12.59,11.92C10.73,12.54 9.27,13.53 8.19,14.5C7.16,15.46 6.45,16.39 6.04,17C4.9,15.66 4.2,13.91 4.2,12M8.55,5C9.1,5.65 10.18,7.06 11.34,9.25C9,9.96 6.61,10.12 5.18,10.12C5.14,10.12 5.1,10.12 5.06,10.12H5.05C4.81,10.12 4.6,10.12 4.43,10.11C5,7.87 6.5,6 8.55,5M12,4.2C13.84,4.2 15.53,4.84 16.86,5.91C15.84,7.14 14.5,8 13.03,8.65C12,6.67 11,5.25 10.34,4.38C10.88,4.27 11.43,4.2 12,4.2M18.13,7.18C19.1,8.42 19.71,9.96 19.79,11.63C18.66,11.39 17.6,11.28 16.6,11.28V11.28H16.59C15.79,11.28 15.04,11.35 14.33,11.47C14.16,11.05 14,10.65 13.81,10.26C15.39,9.57 16.9,8.58 18.13,7.18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </main>
 </body>
