--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <div class="container">
       <h1>Stewart Knapman</h1>
-      <p>Senior technical lead and Shopify Plus expert with over 12 years of web development&nbsp;experience.
+      <p>Senior technical lead and Shopify Plus expert with over 12 years of web design, development, and strategy&nbsp;experience.
         <br><a href="mailto:info@stewartknapman.com">Contact me to see how I can add value to your next&nbsp;project</a>.
       </p>
       <ul class="link-list">
